--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@tailwindcss/typography": "^0.4.0",
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.3.4",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.3.6",
@@ -23,9 +23,7 @@
     },
     "dependencies": {
         "chart.js": "^3.4.1",
-        "laravel-echo": "^1.11.2",
         "plotly.js-dist-min": "^2.5.0",
-        "requirejs": "^2.3.6",
-        "socket.io-client": "^4.2.0"
+        "requirejs": "^2.3.6"
     }
 }
